--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,7 +22,7 @@ unbind -T copy-mode-vi Space;
 unbind -T copy-mode-vi Enter;
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 
 # Improve colors
 set -g default-terminal 'screen-256color'
@@ -58,7 +58,8 @@ set-window-option -g clock-mode-colour green #green
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
-
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 # tmux plugin manager settings
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
