better template for c and python

--- a/nvim/templates/c.template
+++ b/nvim/templates/c.template
@@ -1,9 +1,5 @@
 /**
  * @author: {{NAME}} ({{EMAIL}})
  * @created: {{YEAR}}/{{MONTH}}/{{DATE}} {{TIME}} {{DAY_FULL}}
- * @filename: {{FILEE}}
+ * @description: {{CURSOR}}
  */
-
-#include "{{FILE}}.h"
-
-{{CURSOR}}
